# neon

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile.am  README.md  README.rst  configure.ac  neon.pc  neon.pc.in
doc/: doxygen-neon  peripheral.uxf
doc/elink/: ack-nack frame.uxf  alg - EP server.uxf  elink protokol.odt  elink-es.uxf  elink.uxf  epp - cases.uxf  format prikaza  link-structure.uxf  system overview.uxf
documentation/: doxyfile_base  doxyfile_neon
documentation/elink/: COMM.uxf  epp - tools.uxf  epp frame.uxf  server.uxf  stp frame.uxf  system struct.uxf  trace - cases.uxf
scripts/: update_source.sh
test/drivers/uart/: stm32f4xx_it.c  stm32f4xx_it.c~  uart_test_1.c
test/eds/: hsm_test_1.c
test/eds/epa_1/: epa_test_1.c
test/eds/equeue/: equeue_test_1.c
test/eds/fsm_1/: fsm_test_1.c
test/eds/fsm_2/: fsm_test_2.c
test/eds/hsm_1/: hsm_test_1.c
test/kernel/blinky/: main.h
test/mem/: esolid-mem-test-x86.c
